# word-freq-counter

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  lipsum.txt  output.txt  task.txt
src/: freq.cpp
